[package]
name = "guessing-game"
description = "Rust入門書第2章参照: https://doc.rust-jp.rs/book-ja/ch02-00-guessing-game-tutorial.html"
version = "1.1.0"
authors = ["Rinrin.rs <rinrin0413.valley@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/Rinrin0413/guessing-game.git"
readme = "README.md"
edition = "2021"

[dependencies]
rand = "0.3.14"
